# APS-Biometria

./: gov_app.db  mkdocs.yml  pyproject.toml
docs/: index.md
gui_components/: TelaLogin.py
projeto_biometria/: main.py
projeto_biometria/db_components/: db_control.py
projeto_biometria/gui_components/: __init__.py  gui_cadastro.py  gui_login.py  gui_main.py
